--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.41"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
